# versuch_rob

kuavo-ros-control/src/automatic_test/motioncapture/: .gitignore  CMakeLists.txt  README.md  package.xml  动捕sdk说明.md
kuavo-ros-control/src/automatic_test/motioncapture/include/: SeekerSDKCAPI.h  SeekerSDKClient.h  SeekerSDKTypes.h  Utility.h
kuavo-ros-control/src/demo/full_body_demo/: CMakeLists.txt  actions_player.py  bvh2action.py  config.yaml  csv_trajectory_publisher.py  manual_contact_annotation.py  motion_editer.py  package.xml  readme.md  全身控制接口说明.md
kuavo-ros-control/src/demo/grab_box/: CMakeLists.txt  README.md  package.xml
kuavo-ros-control/src/gazebo/gazebo-sim/: CMakeLists.txt  package.xml
kuavo-ros-control/src/humanoid-control/humanoid_common/: CMakeLists.txt  package.xml
kuavo-ros-control/src/humanoid-control/humanoid_controllers/: CMakeLists.txt  package.xml
kuavo-ros-control/src/humanoid-control/humanoid_interface/: CMakeLists.txt  package.xml
kuavo-ros-control/src/humanoid-control/humanoid_interface_drake/: CMakeLists.txt  package.xml
kuavo-ros-control/src/image_processing/: CMakeLists.txt  package.xml
kuavo-ros-control/src/image_processing/launch/: depth_inpainter.launch
kuavo-ros-control/src/image_processing/scripts/: depth_inpainter.py
kuavo-ros-control/src/kuavo_arm_joint_state_publisher_gui/: CMakeLists.txt  package.xml  readme.md  setup.py
kuavo-ros-control/src/kuavo_arm_joint_state_publisher_gui/scripts/: kuavo_arm_joint_state_publisher_gui
kuavo-ros-control/src/kuavo_assets/: CMakeLists.txt  package.xml  readme.md
kuavo-ros-control/src/kuavo_assets/config/: kuavo4pro_dual_canbus_cofig.yaml  kuavo4pro_single_canbus_cofig.yaml  kuavo5_dual_canbus_cofig.yaml  kuavo5_single_canbus_cofig.yaml  kuavo5_v53_dual_canbus_cofig.yaml  kuavo5w_v62_dual_canbus_cofig.yaml  roban2-0_dual_canbus_cofig.yaml  roban2-0_single_canbus_cofig.yaml  roban2-1_dual_canbus_cofig.yaml  roban2-1_single_canbus_cofig.yaml
kuavo-ros-control/src/kuavo_assets/launch/: gazebo_42.launch
kuavo-ros-control/src/kuavo_assets/scripts/: check_ecmaster_type.sh  get_urdf_mass.sh  get_xml_mass.sh  install_deps_packages.sh  install_robot_localization_env.sh  modify_torso_mass.sh  modify_torso_mass_xml.sh  packages_with_versions.txt  testEffortCMD.py  trim_mesh_to_ik.py  update_mass.sh
kuavo-ros-control/src/kuavo_assets/src/: package_path.cc
kuavo-ros-control/src/kuavo_common/: CMakeLists.txt  package.xml
kuavo-ros-control/src/kuavo_common/cmake/: kuavo_commonConfig.cmake.in
kuavo-ros-control/src/kuavo_common/python/: robot_version.py
kuavo-ros-control/src/kuavo_common/src/: kuavo_common.cpp
kuavo-ros-control/src/kuavo_common/tests/: kuavo_common_test.cpp
kuavo-ros-control/src/kuavo_mapping/: CMakeLists.txt  package.xml
kuavo-ros-control/src/kuavo_mapping/srv/: DeleteMap.srv  EditMap.srv  GetCurrentMap.srv  InitialPoseWithTaskPoint.srv  RenameMap.srv  SaveMap.srv  StartMapping.srv  StopMapping.srv  TaskPointOperation.srv
kuavo-ros-control/src/kuavo_monitor/: CMakeLists.txt  package.xml
kuavo-ros-control/src/kuavo_monitor/cfg/: cfg.yaml
kuavo-ros-control/src/kuavo_monitor/script/: monitor_NUC.sh  record_dstat.sh
kuavo-ros-control/src/kuavo_monitor/src/: kuavo_monitor.cpp  kuavo_monitor_node.cpp  mpc_policy_publisher.cpp
kuavo-ros-control/src/kuavo_msgs/: CMakeLists.txt  format_msgs.py  generate_mapping_rules.py  package.xml
kuavo-ros-control/src/kuavo_msgs/msg/: AprilTagDetection.msg  AprilTagDetectionArray.msg  AudioPlaybackStatus.msg  BatteryInfo.msg  FTsensorData.msg  FaceBoundingBox.msg  MmDetectionMsg.msg  RobotActionState.msg  TaskPoint.msg  VMPTrajectoryState.msg  armCollisionCheckInfo.msg  armHandPose.msg  armHandPoseFree.msg  armPoseWithTimeStamp.msg  armTargetPoses.msg  bezierCurveCubicPoint.msg  dexhandCommand.msg  dexhandTouchState.msg  footPose.msg  footPose6D.msg  footPose6DTargetTrajectories.msg  footPoseTargetTrajectories.msg  footPoseWithVision.msg  footPoseWithVisionArray.msg  footPoses.msg  footPoses6D.msg  fullBodyTargetTrajectories.msg  gaitTimeName.msg  gestureInfo.msg  gestureTask.msg  headBodyPose.msg  ikSolveParam.msg  jointBezierTrajectory.msg  jointCmd.msg  jointData.msg  kuavoModeSchedule.msg  lbTimedOfflineTraj.msg  lejuClawCommand.msg  lejuClawState.msg  motorParam.msg  (+18 more)
kuavo-ros-control/src/kuavo_msgs/srv/: CreatePath.srv  ExecuteArmAction.srv  GetAllMaps.srv  GetBatteryInfo.srv  GetStringList.srv  GetTargetPartPoseInCamera.srv  NavigateToTaskPoint.srv  RepublishTFs.srv  SetHeadControlMode.srv  SetInitialPose.srv  SetJoyTopic.srv  SetLEDMode.srv  SetLEDMode_free.srv  SetString.srv  SpeechSynthesis.srv  TaskPointOperation.srv  adjustZeroPoint.srv  changeArmCtrlMode.srv  changeArmCtrlModeKuavo.srv  changeLbMpcObsUpdateModeSrv.srv  changeLbQuickModeSrv.srv  changeMotorParam.srv  changeTorsoCtrlMode.srv  changeWaistCtrlMode.srv  chassisPoseCmdSrv.srv  controlLejuClaw.srv  enableHandTouchSensor.srv  fkSrv.srv  footPose6DTargetTrajectoriesSrv.srv  footPoseTargetTrajectoriesSrv.srv  gestureExecute.srv  gestureExecuteState.srv  gestureList.srv  getControllerList.srv  getCurrentGaitName.srv  getLbTorsoInitialPose.srv  getMotorParam.srv  getMotorZeroPoints.srv  goToZeroPoint.srv  handForceLevel.srv  (+21 more)
kuavo-ros-control/src/kuavo_solver/: CMakeLists.txt  package.xml
kuavo-ros-control/src/kuavo_solver/cmake/: kuavo_solverConfig.cmake.in
kuavo-ros-control/src/kuavo_solver/src/: ankle_solver.cpp  roban_ankle_solver.cpp
kuavo-ros-control/src/leju_utils/: CMakeLists.txt  package.xml
kuavo-ros-control/src/mujoco/: CMakeLists.txt  package.xml
kuavo-ros-control/src/mujoco/config/: actuator_dynamics_config.yaml
kuavo-ros-control/src/mujoco/include/: mujoco_dds.h  mujoco_node.h
kuavo-ros-control/src/mujoco/launch/: defaultQpos.yaml  mujoco_sim.launch  nodelet.launch  nodelet_with_arm.launch
kuavo-ros-control/src/mujoco/plugins/: nodelet_mujoco_plugin.xml
kuavo-ros-control/src/mujoco/src/: dexhand_mujoco_node.cpp  dexhand_mujoco_node.h  joint_address.hpp  main.cc  mujoco_dds.cc  mujoco_node.cc  mujoco_nodelet.cc
(+3941 files in other folders)
