<package format="2">
  <name>kuavo_arm_joint_state_publisher_gui</name>
  <version>1.0.0</version>
  <description>
    This package contains a GUI tool for setting and publishing arm joint state values.
  </description>
  <author email="fengrongman@gmail.com">Feng Rongman</author>
  <maintainer email="fengrongman@gmail.com">Feng Rongman</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
