<?xml version="1.0"?>
<package format="2">
  <name>kuavo_monitor</name>
  <version>0.0.0</version>
  <description>The kuavo_monitor package</description>

  <maintainer email="wangzhengtao@lejurobot.com">matthew</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ocs2_core</build_depend>
  <build_depend>ocs2_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
