<?xml version="1.0"?>
<package format="2">
  <name>leju_utils</name>
  <version>0.0.0</version>
  <description>The leju_utils package</description>
  <maintainer email="chenzujian@lejurobot.com">chenzujian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen3</build_depend>
  <build_depend>kuavo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>eigen3</build_export_depend>
  <build_export_depend>kuavo_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>kuavo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>

  </export>
</package>
